--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="/css/styles.css" type="text/css" rel="stylesheet">
+    <link href="css/styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    
-<h1>This is a title!</h1>
+<header>
+<img src="#" class="logo">
+<h1 class="title">Site Title</h1>
+<nav>
+    <a href="#" class="navItem">Home</a>
+</nav>
 
+</header>
+<h1>Look at me!</h1>
 
+<img src="images/2021-Portrait-Blue.png" width="600" class="me">
 
 
 </body>
